--- a/index_dark_normal.html
+++ b/index_dark_normal.html
@@ -2,17 +2,18 @@
 <html>
 	<head>
 		<title>Social Interaction</title>
-        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" type="text/css" href="style_dark.css" />
         <script src="http://d3js.org/d3.v3.js"></script>
+        <style type="text/css" font-family: arial></style>
 	</head>
-<body>
+<body bgcolor=#000>
     <div id="clock" class=""></div>
     <div id="graph" style="width:100%;margin:auto;height:790px"></div>
     
     <script src="dataHandler.js"></script>
     <script src="main.js"></script>
     <script>
-        /*
+        
         init("data/contact_list.csv");
         //init("test.csv");
         /*/
